--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,30 +1,87 @@
-body {
-  font: medium sans-serif;
-}
-
-.window-container {
-  position: relative;
-  z-index: 1;
-  width: 100vw;
-  max-width: 100vw;
+html, body {
+  font: medium;
+  font-family: monospace;
   height: 100vh;
   max-height: 100vh;
+  overflow: hidden;
+  background-image: url("./WindowsXPBackground.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;  
+  background-size: cover;
+}
+
+.os {
+  font-size: large;
+  font-family: monospace;
+  height: 100%;
+  max-height: 100%;
+  width: 100vw;
+  max-width: 100vw;
+  overflow: hidden;
+}
+.navbar-text {
+  height: inherit;
+  vertical-align: middle;
+  padding-right: 20px;
+}
+
+.navbar-container{
+  position: absolute;
+  display: inline-block;
+  top: 0;
+  left: 0;
+  background: #ddd;
+  height: 50px;
+  max-height: 50px;
+  width: 100vw;
+  max-width: 100vw;
+  text-align: right;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: default;
+  border-bottom: 1px solid #000;
+}
+
+
+.desktop-icons {
+  position: absolute;
+  top: 51px;
+  left: 0px;
+  z-index: 1;
+  width: 100%;
+  min-width: 100%;
+  max-width: 100vw;
+  height: calc(100% - 51px);
+  min-height: 100%;
+  max-height: calc(100% - 51px);
   overflow-y: hidden;
+  display: grid;
+  grid-template-columns: repeat(10, 120px);
+  grid-template-rows: repeat(5, 120px);
+  gap: 10px 10px;
+  overflow: hidden;
 }
 
 .drag-handle {
   cursor: move;
   background: #ddd;
-  border: 1px solid #999;
-  border-radius: 3px;
   display: block;
   margin-bottom: 10px;
   padding: 3px 5px;
+  -webkit-user-select: none;    
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: default;
 }
 
 .window-title {
   text-align: center;
   display: block;
+  
 }
 
 .close-button {
@@ -34,9 +91,19 @@ body {
 .window {
   width: 400px;
   height: 400px;
-  background-color: #0cd;
+  background-color: #fcfcfc;
   border: 1px solid #000;
+  border-radius: 3px;
   position: absolute;
-  top: 10px;
-  left: 10px;
+  top: 40%;
+  left: 40%;
+}
+
+.window-content {
+  padding: 0px 10px;
+}
+
+.icon {
+  display: inline-block;
+  vertical-align: bottom;
 }
